--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "RDR Lino Regular";
+  src: url(RDR\ Lino\ Regular.woff2) format("woff2");
+}
+
 body {
   background-color: #0e0e10;
   color: #dadada;
